--- a/css/style.css
+++ b/css/style.css
@@ -14,33 +14,37 @@
 }
 
 /* BASE */
+
+html {
+  font-size: 100%;
+}
 body {
   font-family: "Outfit", sans-serif;
-  font-size: 15px;
+  font-size: 0.9375rem;
   background-color: var(--Light-gray);
   width: 100%;
+  display: flex;
+  min-height: 100vh;
   max-width: 1440px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin: 0 auto;
 }
 
 /* CARD */
 .card {
+  margin: 0 auto;
   width: 100%;
   max-width: 350px;
   background-color: var(--White);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin-inline: auto;
-  margin-top: 5rem;
-  margin-bottom: 5rem;
-  padding: 0.5rem;
+  padding: 0.9rem;
   border-radius: 0.9rem;
 }
 
 img {
   border-radius: 0.9rem;
+  max-width: 100%;
 }
 
 .card__text {
@@ -61,19 +65,5 @@ h1 {
 p {
   font-size: 1.1rem;
   line-height: 1.4;
-  color: var(--Grayish-blue);
-}
-
-.attribution {
-  font-size: 15px;
-  text-align: center;
-}
-.attribution a {
-  font-size: 15px;
-  color: hsl(228, 45%, 44%);
-  text-decoration: none;
-}
-
-.attribution a:hover {
   color: var(--Grayish-blue);
 }
